--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,9 +15,8 @@ s3server.securityEnabled=false
 # switch to enable logging. each api request and each repository call will be logged
 s3server.loggingEnabled=true
 # directory where the FSRepository stores the bucket and file data
-#s3server.fsrepo.root=E:/yunpans3/s3server
-s3server.fsrepo.root=/mnt/s3store
-
+s3server.fsrepo.root=E:/mnt/s3server
+#s3server.fsrepo.root=/data2/s3/cache
 s3server.s3store.accessKey=SYSTEM
 s3server.s3store.secretKey=SYSTEM
 
@@ -25,8 +24,6 @@ s3server.superNodeNum=0
 s3server.userID=1
 #p2p端口
 s3server.port=6611
-
-
 s3server.url=http://localhost:8083/api/s3
 #用于判断文件是否需要写入缓存，大于当前配置的值写入缓存，小于则直接存放在内存中
 s3server.allowMaxSize=2097152
@@ -54,9 +51,15 @@ s3server.allowMaxSize=2097152
 
 #producer3
 s3server.superNodeID=16Uiu2HAkwNCD9HSH5hh36LmzgLjRcQiQFpT9spwspaAM5AH3rqA9
-s3server.superNodeKey=16Uiu2HAkwNCD9HSH5hh36LmzgLjRcQiQFpT9spwspaAM5AH3rqA9
+#s3server.superNodeKey=16Uiu2HAkwNCD9HSH5hh36LmzgLjRcQiQFpT9spwspaAM5AH3rqA9
 s3server.superNodeAddr1=/ip4/152.136.18.185/tcp/9999
 s3server.username=username3333
 s3server.KUSp=5JXZV8PBL5Zw87MG7GaBc6jVwzGxPQa7ZfwevN6dqLFpRNPhELw
 #合约账户
 s3server.contractAccount=hddpool12345
+
+#韩国
+#s3server.superNodeID=16Uiu2HAkyHhwuzkR6fRhKbhUBVMySBKKtLCRkReYTJQEyfCkPSfN
+#s3server.superNodeAddr1=/ip4/150.109.236.221/tcp/9999
+#s3server.username=yottaclient1
+#s3server.KUSp=5JXi4F5HaKv3jrRSCFVXHa9Y4MAdpc4j5BuGQXuUrcgYzNqrgrC
