--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,8 +15,8 @@ s3server.securityEnabled=false
 # switch to enable logging. each api request and each repository call will be logged
 s3server.loggingEnabled=true
 # directory where the FSRepository stores the bucket and file data
-s3server.fsrepo.root=E:/mnt/s3server
-#s3server.fsrepo.root=/data2/s3/cache
+#s3server.fsrepo.root=E:/mnt/s3cache
+s3server.fsrepo.root=/data2/s3/cache
 s3server.s3store.accessKey=SYSTEM
 s3server.s3store.secretKey=SYSTEM
 
@@ -51,9 +51,15 @@ s3server.allowMaxSize=2097152
 
 #producer3
 s3server.superNodeID=16Uiu2HAkwNCD9HSH5hh36LmzgLjRcQiQFpT9spwspaAM5AH3rqA9
-#s3server.superNodeKey=16Uiu2HAkwNCD9HSH5hh36LmzgLjRcQiQFpT9spwspaAM5AH3rqA9
 s3server.superNodeAddr1=/ip4/152.136.18.185/tcp/9999
 s3server.username=username3333
 s3server.KUSp=5JXZV8PBL5Zw87MG7GaBc6jVwzGxPQa7ZfwevN6dqLFpRNPhELw
 #合约账户
 s3server.contractAccount=hddpool12345
+
+#测试环境202
+#s3server.superNodeID=16Uiu2HAm4ejSpUiVYEYc2pCk7RUa3ScdswM6cXGwzTZziSKcAYwi
+#s3server.superNodeAddr1=/ip4/152.136.11.202/tcp/9999
+#
+#s3server.username=username1111
+#s3server.KUSp=5J4kLkFs6FTGBXFT3BYvSBfEQXVriU628GEKLwNekW19UziA5Z5
