--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.port=8083
 # mapping path for the s3server servlet
 s3server.baseUrl=/api/s3
 # thread pool for the repository access
-s3server.threadPoolSize=100
+s3server.threadPoolSize=10000
 # enable or disable the authorization header check. if disabled, the system user will be used for all requests
 # and all data is exposed to public!
 s3server.securityEnabled=false
@@ -48,12 +48,15 @@ s3server.allowMaxSize=2097152
 #s3server.superNodeAddr1=/ip4/152.136.17.115/tcp/9999
 #s3server.username=username2222
 #s3server.KUSp=5JTN99LzHaZMDF2BpAwvsv9cBUSvUc9u2XyQF7LmcGRDA5ANFD7
-
+#usernamecsdn
+#5Kgr1FpVw38fdrx6rFzSfGYMoXMfJnJEnXDV1HDeoCwE4yScu5i
 #producer3
+s3server.username=usernamecsdn
+s3server.KUSp=5JXZV8PBL5Zw87MG7GaBc6jVwzGxPQa7ZfwevN6dqLFpRNPhELw
 s3server.superNodeID=16Uiu2HAkwNCD9HSH5hh36LmzgLjRcQiQFpT9spwspaAM5AH3rqA9
 s3server.superNodeAddr1=/ip4/152.136.18.185/tcp/9999
-s3server.username=username3333
-s3server.KUSp=5JXZV8PBL5Zw87MG7GaBc6jVwzGxPQa7ZfwevN6dqLFpRNPhELw
+#s3server.username=username3333
+#s3server.KUSp=5JXZV8PBL5Zw87MG7GaBc6jVwzGxPQa7ZfwevN6dqLFpRNPhELw
 #∫œ‘º’Àªß
 s3server.contractAccount=hddpool12345
 
