--- a/pom.xml
+++ b/pom.xml
@@ -73,11 +73,11 @@
 			<!--&lt;!&ndash;<systemPath>${basedir}/src/main/resources/lib/MsgDef-1.0-SNAPSHOT.jar</systemPath>&ndash;&gt;-->
 		<!--</dependency>-->
 
-		<dependency>
-			<groupId>nodemgmt-java-binding</groupId>
-			<artifactId>nodemgmt-java-binding</artifactId>
-			<version>1.0</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>nodemgmt-java-binding</groupId>-->
+			<!--<artifactId>nodemgmt-java-binding</artifactId>-->
+			<!--<version>1.0</version>-->
+		<!--</dependency>-->
 		<!--<dependency>-->
 			<!--<groupId>YTSDK</groupId>-->
 			<!--<artifactId>YTSDK</artifactId>-->
@@ -118,16 +118,16 @@
 			<!--<version>3.51</version>-->
 			<!--<systemPath>${basedir}/src/main/resources/lib/wrapper-3.51.jar</systemPath>-->
 		<!--</dependency>-->
-		<dependency>
-			<groupId>MsgDef</groupId>
-			<artifactId>MsgDef</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>YTSN</groupId>
-			<artifactId>YTSN</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>MsgDef</groupId>-->
+			<!--<artifactId>MsgDef</artifactId>-->
+			<!--<version>1.0-SNAPSHOT</version>-->
+		<!--</dependency>-->
+		<!--<dependency>-->
+			<!--<groupId>YTSN</groupId>-->
+			<!--<artifactId>YTSN</artifactId>-->
+			<!--<version>1.0-SNAPSHOT</version>-->
+		<!--</dependency>-->
 		<dependency>
 			<groupId>YTSDK</groupId>
 			<artifactId>YTSDK</artifactId>
