--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@
 #
 # embedded tomcat server port
 server.port=8083
+server.tomcat.uri-encoding=utf-8
 #server.servlet.context-path=/api/s3client
 # mapping path for the s3server servlet
 s3server.baseUrl=/api/s3
@@ -15,8 +16,8 @@ s3server.securityEnabled=false
 # switch to enable logging. each api request and each repository call will be logged
 s3server.loggingEnabled=true
 # directory where the FSRepository stores the bucket and file data
-#s3server.fsrepo.root=E:/mnt/s3cache
-s3server.fsrepo.root=/data2/s3/cache
+s3server.fsrepo.root=E:/s3test/s3cachetest
+#s3server.fsrepo.root=/ytobject/s3/cache
 s3server.s3store.accessKey=SYSTEM
 s3server.s3store.secretKey=SYSTEM
 
@@ -51,14 +52,17 @@ s3server.allowMaxSize=2097152
 #usernamecsdn
 #5Kgr1FpVw38fdrx6rFzSfGYMoXMfJnJEnXDV1HDeoCwE4yScu5i
 #producer3
-s3server.username=usernamecsdn
-s3server.KUSp=5JXZV8PBL5Zw87MG7GaBc6jVwzGxPQa7ZfwevN6dqLFpRNPhELw
-s3server.superNodeID=16Uiu2HAkwNCD9HSH5hh36LmzgLjRcQiQFpT9spwspaAM5AH3rqA9
-s3server.superNodeAddr1=/ip4/152.136.18.185/tcp/9999
-#s3server.username=username3333
+#s3server.username=usernamecsdn
+#s3server.KUSp=5Kgr1FpVw38fdrx6rFzSfGYMoXMfJnJEnXDV1HDeoCwE4yScu5i
+s3server.superNodeID=16Uiu2HAmTT47W5sBd2oF6MMwft8GAqDyZJFXc2HVit3oQ8p4jijh
+
+s3server.superNodeAddr1=/ip4/35.176.59.89/tcp/9999
+
+s3server.username=usernametest
 #s3server.KUSp=5JXZV8PBL5Zw87MG7GaBc6jVwzGxPQa7ZfwevN6dqLFpRNPhELw
+s3server.KUSp=5K6LHAW4KXLkZ83RRmxvKJiAFkTeQRdx4vkqYdSD59dRd5vexJS
 #合约账户
-s3server.contractAccount=hddpool12345
+#s3server.contractAccount=hddpool12345
 
 #测试环境202
 #s3server.superNodeID=16Uiu2HAm4ejSpUiVYEYc2pCk7RUa3ScdswM6cXGwzTZziSKcAYwi
