--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=8083
 server.tomcat.uri-encoding=utf-8
 #server.servlet.context-path=/api/s3client
 # mapping path for the s3server servlet
-s3server.baseUrl=/api/s3
+s3server.baseUrl=
 # thread pool for the repository access
 s3server.threadPoolSize=10000
 # enable or disable the authorization header check. if disabled, the system user will be used for all requests
@@ -25,7 +25,7 @@ s3server.superNodeNum=0
 s3server.userID=1
 #p2p端口
 s3server.port=6611
-s3server.url=http://localhost:8083/api/s3
+s3server.url=
 #用于判断文件是否需要写入缓存，大于当前配置的值写入缓存，小于则直接存放在内存中
 s3server.allowMaxSize=2097152
 
@@ -54,13 +54,31 @@ s3server.allowMaxSize=2097152
 #producer3
 #s3server.username=usernamecsdn
 #s3server.KUSp=5Kgr1FpVw38fdrx6rFzSfGYMoXMfJnJEnXDV1HDeoCwE4yScu5i
-s3server.superNodeID=16Uiu2HAmTT47W5sBd2oF6MMwft8GAqDyZJFXc2HVit3oQ8p4jijh
-
-s3server.superNodeAddr1=/ip4/35.176.59.89/tcp/9999
-
-s3server.username=usernametest
+#s3server.superNodeID=16Uiu2HAmTT47W5sBd2oF6MMwft8GAqDyZJFXc2HVit3oQ8p4jijh
+#
+#s3server.superNodeAddr1=/ip4/35.176.59.89/tcp/9999
+#s3server.superNodeID=16Uiu2HAkwNCD9HSH5hh36LmzgLjRcQiQFpT9spwspaAM5AH3rqA9
+#s3server.superNodeAddr1=/ip4/152.136.18.185/tcp/9999
+#s3server.username=username3333
 #s3server.KUSp=5JXZV8PBL5Zw87MG7GaBc6jVwzGxPQa7ZfwevN6dqLFpRNPhELw
-s3server.KUSp=5K6LHAW4KXLkZ83RRmxvKJiAFkTeQRdx4vkqYdSD59dRd5vexJS
+#公测环境
+#s3server.superNodeID=16Uiu2HAmTT47W5sBd2oF6MMwft8GAqDyZJFXc2HVit3oQ8p4jijh
+#
+#s3server.superNodeAddr1=/ip4/35.176.59.89/tcp/9999
+#s3server.username=test1234test
+#s3server.KUSp=5KDPHYnxJQHtUotnuSSBw8wm4Lwzs1qiqcqeL5SqXz8eLwuqz9Z
+#研发环境
+s3server.superNodeID=16Uiu2HAmPqE8R8U7CHRsKrNw9aVjdxUrGUEWBvNPGsVbaCBxrLkt
+
+s3server.superNodeAddr1=/ip4/49.234.139.206/tcp/9999
+s3server.username=username1234
+s3server.KUSp=5JcDH48njDbUQLu1R8SWwKsfWLnqBpWXDDiCgxFC3hioDuwLhVx
+#研发环境账号 username1234 storename123
+#username1234
+#5JcDH48njDbUQLu1R8SWwKsfWLnqBpWXDDiCgxFC3hioDuwLhVx
+#
+#storename123
+#5KfbRow4L71fZnnu9XEnkmVqByi6CSmRiADJCx6asRS4TUEkU79
 #合约账户
 #s3server.contractAccount=hddpool12345
 
