--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -74,6 +74,11 @@ s3server.superNodeAddr1=/ip4/49.234.139.206/tcp/9999
 s3server.username=username1234
 s3server.KUSp=5JcDH48njDbUQLu1R8SWwKsfWLnqBpWXDDiCgxFC3hioDuwLhVx
 #研发环境账号 username1234 storename123
+#客户账号：
+#s3server.username=usernameshyf
+#s3server.KUSp=5JxX4Y9JUptGzPLWsbKkotjWUBai99S3z5AsJDuc8Vk83MHneg4
+#s3server.username=usernamegxy2
+#s3server.KUSp=5HvbYUCmBbEzdTxhETakGZS7V6ZpLuh7q75xVyz58XsYWsrw1d1
 #username1234
 #5JcDH48njDbUQLu1R8SWwKsfWLnqBpWXDDiCgxFC3hioDuwLhVx
 #
