--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,17 +9,19 @@ server.tomcat.uri-encoding=utf-8
 # mapping path for the s3server servlet
 s3server.baseUrl=
 # thread pool for the repository access
-s3server.threadPoolSize=10000
+s3server.threadPoolSize=100
 # enable or disable the authorization header check. if disabled, the system user will be used for all requests
 # and all data is exposed to public!
 s3server.securityEnabled=false
 # switch to enable logging. each api request and each repository call will be logged
 s3server.loggingEnabled=true
 # directory where the FSRepository stores the bucket and file data
-s3server.fsrepo.root=E:/s3test/s3cachetest
-#s3server.fsrepo.root=/ytobject/s3/cache
+s3server.fsrepo.root=D:/s3cache
 s3server.s3store.accessKey=SYSTEM
 s3server.s3store.secretKey=SYSTEM
+s3server.uploadShardThreadNum =500
+s3server.downloadThread =200
+s3server.uploadBlockThreadNum=3
 
 s3server.superNodeNum=0
 s3server.userID=1
@@ -65,14 +67,42 @@ s3server.allowMaxSize=2097152
 #s3server.superNodeID=16Uiu2HAmTT47W5sBd2oF6MMwft8GAqDyZJFXc2HVit3oQ8p4jijh
 #
 #s3server.superNodeAddr1=/ip4/35.176.59.89/tcp/9999
+#s3server.username=usernamexjbt
+#s3server.KUSp=5JKys4vC1jGUiJRS6562rhdHUV7tBRWtdYZ7Kx5eX3Y4oGK13Rn
+#s3server.username=usernamexjbt
+#s3server.KUSp=5JKys4vC1jGUiJRS6562rhdHUV7tBRWtdYZ7Kx5eX3Y4oGK13Rn
 #s3server.username=test1234test
 #s3server.KUSp=5KDPHYnxJQHtUotnuSSBw8wm4Lwzs1qiqcqeL5SqXz8eLwuqz9Z
 #研发环境
-s3server.superNodeID=16Uiu2HAmPqE8R8U7CHRsKrNw9aVjdxUrGUEWBvNPGsVbaCBxrLkt
+#s3server.superNodeID=16Uiu2HAmR7VVxjZ516FkXmjoeAaMQ5UBEtqR1xPDmFhLi1ivb5GP
+#s3server.superNodeAddr1=/ip4/52.214.26.210/tcp/9999
+#s3server.username=storename123
+#s3server.KUSp=5KfbRow4L71fZnnu9XEnkmVqByi6CSmRiADJCx6asRS4TUEkU79
 
-s3server.superNodeAddr1=/ip4/49.234.139.206/tcp/9999
-s3server.username=username1234
-s3server.KUSp=5JcDH48njDbUQLu1R8SWwKsfWLnqBpWXDDiCgxFC3hioDuwLhVx
+#会清
+s3server.superNodeID=16Uiu2HAmE83eDy4ypdMokJmdecUFJKPB3iCEQbu5qeR36V2sCiwF
+s3server.superNodeAddr1=/ip4/118.190.38.93/tcp/9999
+#s3server.username=testuser3333
+#s3server.KUSp=5KWQK5zx8zNZukNn7uDwyUMWHoArhfi1Yigmb2VBFk46k7HSanU
+
+#阿飞
+s3server.username=usernamexfcs
+s3server.KUSp=5KC522eySAQiKtKt2opqy8sC8HKCEeBBhHCwoyeuKVH9ybQvNsB
+
+
+
+
+#storename123
+#5KfbRow4L71fZnnu9XEnkmVqByi6CSmRiADJCx6asRS4TUEkU79
+#公测星际联盟
+#s3server.superNodeID=16Uiu2HAmTT47W5sBd2oF6MMwft8GAqDyZJFXc2HVit3oQ8p4jijh
+#s3server.superNodeAddr1=/ip4/35.176.59.89/tcp/9999
+#s3server.username=useridxjlm12
+#s3server.KUSp=5KJ2FCR8kmci7f4b3NjH3h7gHozJfwgtm67vCfcQXy8tjoih1AX
+#公测环境
+
+#s3server.username=usernamegxy2
+#s3server.KUSp=5HvbYUCmBbEzdTxhETakGZS7V6ZpLuh7q75xVyz58XsYWsrw1d1
 #研发环境账号 username1234 storename123
 #客户账号：
 #s3server.username=usernameshyf
