--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ s3server.userID=1
 s3server.port=6611
 s3server.url=
 #用于判断文件是否需要写入缓存，大于当前配置的值写入缓存，小于则直接存放在内存中
-s3server.allowMaxSize=2097152
+s3server.allowMaxSize=209715200
 
 #logging.config=classpath:log4j.properties
 #s3server.superNodeID=16Uiu2HAm4ejSpUiVYEYc2pCk7RUa3ScdswM6cXGwzTZziSKcAYwi
@@ -73,24 +73,67 @@ s3server.allowMaxSize=2097152
 #s3server.KUSp=5JKys4vC1jGUiJRS6562rhdHUV7tBRWtdYZ7Kx5eX3Y4oGK13Rn
 #s3server.username=test1234test
 #s3server.KUSp=5KDPHYnxJQHtUotnuSSBw8wm4Lwzs1qiqcqeL5SqXz8eLwuqz9Z
-#研发环境
+#研发环境************************************
+#SN 0 上海
+#s3server.superNodeID=16Uiu2HAmPqE8R8U7CHRsKrNw9aVjdxUrGUEWBvNPGsVbaCBxrLkt
+#s3server.superNodeAddr1=/ip4/49.234.139.206/tcp/9999
+#SN 1 爱尔兰
 #s3server.superNodeID=16Uiu2HAmR7VVxjZ516FkXmjoeAaMQ5UBEtqR1xPDmFhLi1ivb5GP
 #s3server.superNodeAddr1=/ip4/52.214.26.210/tcp/9999
+
+#SN 2 阿里云雅加达
+#s3server.superNodeID=16Uiu2HAm1h55uTrWXATukWgMwKdYEEdSbkUpCwfSc2fznfebNcJL
+#s3server.superNodeAddr1=/ip4/149.129.253.29/tcp/9999
+
+#SN 3 伦敦
+#s3server.superNodeID=16Uiu2HAmCtczNYRxsUj4xi4jMGFsfxn1oKYsbSLAYNsJZkJJLgsZ
+#s3server.superNodeAddr1=/ip4/35.178.149.113/tcp/9999
+
+#SN 4 孟买
+#s3server.superNodeID=16Uiu2HAmSXfk5mgmZd2YmA5Aug23vCdUesRuVEeCHSFUDeX2GxWv
+#s3server.superNodeAddr1=/ip4/124.156.54.96/tcp/9999
+
 #s3server.username=storename123
 #s3server.KUSp=5KfbRow4L71fZnnu9XEnkmVqByi6CSmRiADJCx6asRS4TUEkU79
+######
+
+#s3server.username=username1234
+#s3server.KUSp=5JcDH48njDbUQLu1R8SWwKsfWLnqBpWXDDiCgxFC3hioDuwLhVx
+
+#研发环境************************************
+
+
+
+
+
+
 
 #会清
 s3server.superNodeID=16Uiu2HAmE83eDy4ypdMokJmdecUFJKPB3iCEQbu5qeR36V2sCiwF
 s3server.superNodeAddr1=/ip4/118.190.38.93/tcp/9999
-#s3server.username=testuser3333
-#s3server.KUSp=5KWQK5zx8zNZukNn7uDwyUMWHoArhfi1Yigmb2VBFk46k7HSanU
+s3server.username=testuser3333
+s3server.KUSp=5KWQK5zx8zNZukNn7uDwyUMWHoArhfi1Yigmb2VBFk46k7HSanU
 
 #阿飞
-s3server.username=usernamexfcs
-s3server.KUSp=5KC522eySAQiKtKt2opqy8sC8HKCEeBBhHCwoyeuKVH9ybQvNsB
+#s3server.username=usernamexfcs
+#s3server.KUSp=5KC522eySAQiKtKt2opqy8sC8HKCEeBBhHCwoyeuKVH9ybQvNsB
+#李晓辉
+#s3server.superNodeID=16Uiu2HAmE83eDy4ypdMokJmdecUFJKPB3iCEQbu5qeR36V2sCiwF
+#s3server.superNodeAddr1=/ip4/118.190.38.93/tcp/9999
+#s3server.username=zhiwanghdd11
+#s3server.KUSp=5Jjik1cVmLMhRJ5mJP2MsjhaSe8CNshDSA2wKqXzeUWd6dntaoo
 
+#可用公测环境测试账号001号
+#s3server.superNodeID=16Uiu2HAmE83eDy4ypdMokJmdecUFJKPB3iCEQbu5qeR36V2sCiwF
+#s3server.superNodeAddr1=/ip4/118.190.38.93/tcp/9999
+#s3server.username=testuser1111
+#s3server.KUSp=5JzkcFeivyTCKjkd5qFakgSRNZZJmPMQU4z4uEcym9NUF7VYoq8
 
-
+#东莞辰龙测试对接
+#s3server.superNodeID=16Uiu2HAmE83eDy4ypdMokJmdecUFJKPB3iCEQbu5qeR36V2sCiwF
+#s3server.superNodeAddr1=/ip4/118.190.38.93/tcp/9999
+#s3server.username=usernamedgcl
+#s3server.KUSp=5KJsLp1UcgKZG3kaAvWrTBFDTD19z1zWyasCJotuwtDzRaygNFF
 
 #storename123
 #5KfbRow4L71fZnnu9XEnkmVqByi6CSmRiADJCx6asRS4TUEkU79
