--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,13 @@ s3server.s3store.secretKey=SYSTEM
 s3server.uploadShardThreadNum =500
 s3server.downloadThread =200
 s3server.uploadBlockThreadNum=3
+#预分配节点数
+s3server.PNN=200
+#节点列表更新周期（分钟）
+s3server.PTR=2
+#块上传错误重试次数
+s3server.RETRYTIMES = 500
+s3server.zipkinServer=http://39.96.58.245:9411/api/v2/spans
 
 s3server.superNodeNum=0
 s3server.userID=1
@@ -30,6 +37,8 @@ s3server.port=6611
 s3server.url=
 #用于判断文件是否需要写入缓存，大于当前配置的值写入缓存，小于则直接存放在内存中
 s3server.allowMaxSize=209715200
+s3server.SYNC=1
+s3server.SYNC_DIR=D:/s3cache/sync
 
 #logging.config=classpath:log4j.properties
 #s3server.superNodeID=16Uiu2HAm4ejSpUiVYEYc2pCk7RUa3ScdswM6cXGwzTZziSKcAYwi
@@ -75,30 +84,34 @@ s3server.allowMaxSize=209715200
 #s3server.KUSp=5KDPHYnxJQHtUotnuSSBw8wm4Lwzs1qiqcqeL5SqXz8eLwuqz9Z
 #研发环境************************************
 #SN 0 上海
-#s3server.superNodeID=16Uiu2HAmPqE8R8U7CHRsKrNw9aVjdxUrGUEWBvNPGsVbaCBxrLkt
-#s3server.superNodeAddr1=/ip4/49.234.139.206/tcp/9999
-#SN 1 爱尔兰
+s3server.superNodeID=16Uiu2HAmPqE8R8U7CHRsKrNw9aVjdxUrGUEWBvNPGsVbaCBxrLkt
+s3server.superNodeAddr1=/ip4/49.234.139.206/tcp/9999
+#SN 1
 #s3server.superNodeID=16Uiu2HAmR7VVxjZ516FkXmjoeAaMQ5UBEtqR1xPDmFhLi1ivb5GP
-#s3server.superNodeAddr1=/ip4/52.214.26.210/tcp/9999
+#s3server.superNodeAddr1=/ip4/129.211.72.15/tcp/9999
 
-#SN 2 阿里云雅加达
+#SN 2
 #s3server.superNodeID=16Uiu2HAm1h55uTrWXATukWgMwKdYEEdSbkUpCwfSc2fznfebNcJL
-#s3server.superNodeAddr1=/ip4/149.129.253.29/tcp/9999
+#s3server.superNodeAddr1=/ip4/122.152.203.189/tcp/9999
 
-#SN 3 伦敦
+#SN 3
 #s3server.superNodeID=16Uiu2HAmCtczNYRxsUj4xi4jMGFsfxn1oKYsbSLAYNsJZkJJLgsZ
-#s3server.superNodeAddr1=/ip4/35.178.149.113/tcp/9999
+#s3server.superNodeAddr1=/ip4/212.129.153.253/tcp/9999
 
-#SN 4 孟买
+#SN 4
 #s3server.superNodeID=16Uiu2HAmSXfk5mgmZd2YmA5Aug23vCdUesRuVEeCHSFUDeX2GxWv
-#s3server.superNodeAddr1=/ip4/124.156.54.96/tcp/9999
-
-#s3server.username=storename123
-#s3server.KUSp=5KfbRow4L71fZnnu9XEnkmVqByi6CSmRiADJCx6asRS4TUEkU79
-######
-
+#s3server.superNodeAddr1=/ip4/49.235.52.30/tcp/9999
 #s3server.username=username1234
 #s3server.KUSp=5JcDH48njDbUQLu1R8SWwKsfWLnqBpWXDDiCgxFC3hioDuwLhVx
+s3server.username=storename123
+s3server.KUSp=5KfbRow4L71fZnnu9XEnkmVqByi6CSmRiADJCx6asRS4TUEkU79
+######
+
+
+#s3server.username=username222a
+#s3server.KUSp=5KSp1CcHtfZJjTpqZJwUveYyncEMWVfobWXLiAh9kf2NTeMjRSt
+#s3server.username=username222b
+#s3server.KUSp=5JT3vkUeoaMXKw2rJrtVEnC2JTYVNUeU1fU174wDkfTJKigGDDG
 
 #研发环境************************************
 
@@ -109,11 +122,12 @@ s3server.allowMaxSize=209715200
 
 
 #会清
-s3server.superNodeID=16Uiu2HAmE83eDy4ypdMokJmdecUFJKPB3iCEQbu5qeR36V2sCiwF
-s3server.superNodeAddr1=/ip4/118.190.38.93/tcp/9999
-s3server.username=testuser3333
-s3server.KUSp=5KWQK5zx8zNZukNn7uDwyUMWHoArhfi1Yigmb2VBFk46k7HSanU
-
+#s3server.superNodeID=16Uiu2HAmE83eDy4ypdMokJmdecUFJKPB3iCEQbu5qeR36V2sCiwF
+#s3server.superNodeAddr1=/ip4/118.190.38.93/tcp/9999
+#s3server.username=testuser3333
+#s3server.KUSp=5KWQK5zx8zNZukNn7uDwyUMWHoArhfi1Yigmb2VBFk46k7HSanU
+#s3server.username=usernameylzx
+#s3server.KUSp=5KAtNSAWa2uebVrkLT3HbaT1tbUZ7Jc9xnwR99YQU9cespBmGUW
 #阿飞
 #s3server.username=usernamexfcs
 #s3server.KUSp=5KC522eySAQiKtKt2opqy8sC8HKCEeBBhHCwoyeuKVH9ybQvNsB
