--- a/pom.xml
+++ b/pom.xml
@@ -154,7 +154,16 @@
 			<artifactId>jna</artifactId>
 			<version>5.2.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>io.undertow</groupId>
+			<artifactId>undertow-core</artifactId>
+			<version>2.0.1.Final</version>
+		</dependency>
+        <dependency>
+            <groupId>io.undertow</groupId>
+            <artifactId>undertow-servlet</artifactId>
+            <version>2.0.1.Final</version>
+        </dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
