--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
 			<version>3.8.2</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.9</version>
+		</dependency>
+		<dependency>
 			<groupId>com.github.snksoft</groupId>
 			<artifactId>crc</artifactId>
 			<version>1.0.2</version>
