aync upload update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=8083
 server.tomcat.uri-encoding=utf-8
 #server.servlet.context-path=/api/s3client
 # mapping path for the s3server servlet
-s3server.baseUrl=
+s3server.baseUrl=/api/s3
 # thread pool for the repository access
 s3server.threadPoolSize=100
 # enable or disable the authorization header check. if disabled, the system user will be used for all requests
@@ -37,8 +37,11 @@ s3server.port=6611
 s3server.url=
 #用于判断文件是否需要写入缓存，大于当前配置的值写入缓存，小于则直接存放在内存中
 s3server.allowMaxSize=209715200
-s3server.SYNC=1
-s3server.SYNC_DIR=D:/s3cache/sync
+s3server.SYNC=on
+s3server.SYNC_BUCKET=test
+s3server.queueSize=1000
+s3server.syncCount=5
+
 
 #logging.config=classpath:log4j.properties
 #s3server.superNodeID=16Uiu2HAm4ejSpUiVYEYc2pCk7RUa3ScdswM6cXGwzTZziSKcAYwi
