--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -110,6 +110,11 @@ s3server.username=storename123
 s3server.KUSp=5KfbRow4L71fZnnu9XEnkmVqByi6CSmRiADJCx6asRS4TUEkU79
 ######
 
+#s3server.superNodeAddr1=/ip4/172.17.0.2/tcp/9999
+#s3server.superNodeID=16Uiu2HAmTzPwrF2DTZhCuw8Grx1KQ86xwiK2
+#s3server.username=devtester123
+#s3server.KUSp=5KfTE1LhHiepQmtRtLzAjeycRMJ4ECqGSSTQ4oKwLKCADBjMDKi
+
 
 #s3server.username=username222a
 #s3server.KUSp=5KSp1CcHtfZJjTpqZJwUveYyncEMWVfobWXLiAh9kf2NTeMjRSt
@@ -119,46 +124,9 @@ s3server.KUSp=5KfbRow4L71fZnnu9XEnkmVqByi6CSmRiADJCx6asRS4TUEkU79
 #研发环境************************************
 
 
-
-
-
-
-
-#会清
-#s3server.superNodeID=16Uiu2HAmE83eDy4ypdMokJmdecUFJKPB3iCEQbu5qeR36V2sCiwF
-#s3server.superNodeAddr1=/ip4/118.190.38.93/tcp/9999
-#s3server.username=testuser3333
-#s3server.KUSp=5KWQK5zx8zNZukNn7uDwyUMWHoArhfi1Yigmb2VBFk46k7HSanU
-#s3server.username=usernameylzx
-#s3server.KUSp=5KAtNSAWa2uebVrkLT3HbaT1tbUZ7Jc9xnwR99YQU9cespBmGUW
-#阿飞
-#s3server.username=usernamexfcs
-#s3server.KUSp=5KC522eySAQiKtKt2opqy8sC8HKCEeBBhHCwoyeuKVH9ybQvNsB
-#李晓辉
-#s3server.superNodeID=16Uiu2HAmE83eDy4ypdMokJmdecUFJKPB3iCEQbu5qeR36V2sCiwF
-#s3server.superNodeAddr1=/ip4/118.190.38.93/tcp/9999
-#s3server.username=zhiwanghdd11
-#s3server.KUSp=5Jjik1cVmLMhRJ5mJP2MsjhaSe8CNshDSA2wKqXzeUWd6dntaoo
-
-#可用公测环境测试账号001号
-#s3server.superNodeID=16Uiu2HAmE83eDy4ypdMokJmdecUFJKPB3iCEQbu5qeR36V2sCiwF
-#s3server.superNodeAddr1=/ip4/118.190.38.93/tcp/9999
-#s3server.username=testuser1111
-#s3server.KUSp=5JzkcFeivyTCKjkd5qFakgSRNZZJmPMQU4z4uEcym9NUF7VYoq8
-
-#东莞辰龙测试对接
-#s3server.superNodeID=16Uiu2HAmE83eDy4ypdMokJmdecUFJKPB3iCEQbu5qeR36V2sCiwF
-#s3server.superNodeAddr1=/ip4/118.190.38.93/tcp/9999
-#s3server.username=usernamedgcl
-#s3server.KUSp=5KJsLp1UcgKZG3kaAvWrTBFDTD19z1zWyasCJotuwtDzRaygNFF
-
 #storename123
 #5KfbRow4L71fZnnu9XEnkmVqByi6CSmRiADJCx6asRS4TUEkU79
-#公测星际联盟
-#s3server.superNodeID=16Uiu2HAmTT47W5sBd2oF6MMwft8GAqDyZJFXc2HVit3oQ8p4jijh
-#s3server.superNodeAddr1=/ip4/35.176.59.89/tcp/9999
-#s3server.username=useridxjlm12
-#s3server.KUSp=5KJ2FCR8kmci7f4b3NjH3h7gHozJfwgtm67vCfcQXy8tjoih1AX
+
 #公测环境
 
 #s3server.username=usernamegxy2
