--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,15 @@
 # Copyright (c) 2016 Mind Consulting UG(haftungsbeschr?nkt)
 #
 # embedded tomcat server port
-server.port=8083
+server.port=8085
 server.tomcat.uri-encoding=utf-8
+server.ssl.key-store=D:/s3cache/tomcat.keystore
+server.ssl.key-password=123456
+server.ssl.key-store-password=123456
+server.ssl.key-alias=spring
 #server.servlet.context-path=/api/s3client
 # mapping path for the s3server servlet
+#server.http2.enabled=true
 s3server.baseUrl=/api/s3
 # thread pool for the repository access
 s3server.threadPoolSize=100
@@ -37,7 +42,7 @@ s3server.port=6611
 s3server.url=
 #用于判断文件是否需要写入缓存，大于当前配置的值写入缓存，小于则直接存放在内存中
 s3server.allowMaxSize=209715200
-s3server.SYNC=on
+s3server.SYNC=onss
 s3server.SYNC_BUCKET=test
 s3server.queueSize=1000
 s3server.syncCount=5
