--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,16 +3,16 @@
 # Copyright (c) 2016 Mind Consulting UG(haftungsbeschr?nkt)
 #
 # embedded tomcat server port
-server.port=8085
+server.port=8083
 server.tomcat.uri-encoding=utf-8
-server.ssl.key-store=D:/s3cache/tomcat.keystore
-server.ssl.key-password=123456
-server.ssl.key-store-password=123456
-server.ssl.key-alias=spring
+#server.ssl.key-store=D:/s3cache/tomcat.keystore
+#server.ssl.key-password=123456
+#server.ssl.key-store-password=123456
+#server.ssl.key-alias=spring
 #server.servlet.context-path=/api/s3client
 # mapping path for the s3server servlet
 #server.http2.enabled=true
-s3server.baseUrl=/api/s3
+s3server.baseUrl=
 # thread pool for the repository access
 s3server.threadPoolSize=100
 # enable or disable the authorization header check. if disabled, the system user will be used for all requests
@@ -42,117 +42,14 @@ s3server.port=6611
 s3server.url=
 #用于判断文件是否需要写入缓存，大于当前配置的值写入缓存，小于则直接存放在内存中
 s3server.allowMaxSize=209715200
-s3server.SYNC=onss
+s3server.SYNC=onxxxxx
 s3server.SYNC_BUCKET=test
 s3server.queueSize=1000
 s3server.syncCount=5
 
-
-#logging.config=classpath:log4j.properties
-#s3server.superNodeID=16Uiu2HAm4ejSpUiVYEYc2pCk7RUa3ScdswM6cXGwzTZziSKcAYwi
-#s3server.superNodeKey=16Uiu2HAm4ejSpUiVYEYc2pCk7RUa3ScdswM6cXGwzTZziSKcAYwi
-#s3server.superNodeAddr1=/ip4/152.136.11.202/tcp/9999
-#s3server.KUSp=5JcDH48njDbUQLu1R8SWwKsfWLnqBpWXDDiCgxFC3hioDuwLhVx
-#s3server.username=username1234
-
-#producer1
-#s3server.superNodeID=16Uiu2HAkyHhwuzkR6fRhKbhUBVMySBKKtLCRkReYTJQEyfCkPSfN
-#s3server.superNodeKey=16Uiu2HAkyHhwuzkR6fRhKbhUBVMySBKKtLCRkReYTJQEyfCkPSfN
-#s3server.superNodeAddr1=/ip4/152.136.16.118/tcp/9999
-#s3server.username=username1111
-#s3server.KUSp=5J4kLkFs6FTGBXFT3BYvSBfEQXVriU628GEKLwNekW19UziA5Z5
-
-#producer2
-#s3server.superNodeID=16Uiu2HAm9fBJNUzSD5V9aFJQQHbxE3rPsTiyrYk7vju18JCf3xm8
-#s3server.superNodeKey=16Uiu2HAm9fBJNUzSD5V9aFJQQHbxE3rPsTiyrYk7vju18JCf3xm8
-#s3server.superNodeAddr1=/ip4/152.136.17.115/tcp/9999
-#s3server.username=username2222
-#s3server.KUSp=5JTN99LzHaZMDF2BpAwvsv9cBUSvUc9u2XyQF7LmcGRDA5ANFD7
-#usernamecsdn
-#5Kgr1FpVw38fdrx6rFzSfGYMoXMfJnJEnXDV1HDeoCwE4yScu5i
-#producer3
-#s3server.username=usernamecsdn
-#s3server.KUSp=5Kgr1FpVw38fdrx6rFzSfGYMoXMfJnJEnXDV1HDeoCwE4yScu5i
-#s3server.superNodeID=16Uiu2HAmTT47W5sBd2oF6MMwft8GAqDyZJFXc2HVit3oQ8p4jijh
-#
-#s3server.superNodeAddr1=/ip4/35.176.59.89/tcp/9999
-#s3server.superNodeID=16Uiu2HAkwNCD9HSH5hh36LmzgLjRcQiQFpT9spwspaAM5AH3rqA9
-#s3server.superNodeAddr1=/ip4/152.136.18.185/tcp/9999
-#s3server.username=username3333
-#s3server.KUSp=5JXZV8PBL5Zw87MG7GaBc6jVwzGxPQa7ZfwevN6dqLFpRNPhELw
-#公测环境
-#s3server.superNodeID=16Uiu2HAmTT47W5sBd2oF6MMwft8GAqDyZJFXc2HVit3oQ8p4jijh
-#
-#s3server.superNodeAddr1=/ip4/35.176.59.89/tcp/9999
-#s3server.username=usernamexjbt
-#s3server.KUSp=5JKys4vC1jGUiJRS6562rhdHUV7tBRWtdYZ7Kx5eX3Y4oGK13Rn
-#s3server.username=usernamexjbt
-#s3server.KUSp=5JKys4vC1jGUiJRS6562rhdHUV7tBRWtdYZ7Kx5eX3Y4oGK13Rn
-#s3server.username=test1234test
-#s3server.KUSp=5KDPHYnxJQHtUotnuSSBw8wm4Lwzs1qiqcqeL5SqXz8eLwuqz9Z
-#研发环境************************************
 #SN 0 上海
 s3server.superNodeID=16Uiu2HAmPqE8R8U7CHRsKrNw9aVjdxUrGUEWBvNPGsVbaCBxrLkt
 s3server.superNodeAddr1=/ip4/49.234.139.206/tcp/9999
-#SN 1
-#s3server.superNodeID=16Uiu2HAmR7VVxjZ516FkXmjoeAaMQ5UBEtqR1xPDmFhLi1ivb5GP
-#s3server.superNodeAddr1=/ip4/129.211.72.15/tcp/9999
 
-#SN 2
-#s3server.superNodeID=16Uiu2HAm1h55uTrWXATukWgMwKdYEEdSbkUpCwfSc2fznfebNcJL
-#s3server.superNodeAddr1=/ip4/122.152.203.189/tcp/9999
-
-#SN 3
-#s3server.superNodeID=16Uiu2HAmCtczNYRxsUj4xi4jMGFsfxn1oKYsbSLAYNsJZkJJLgsZ
-#s3server.superNodeAddr1=/ip4/212.129.153.253/tcp/9999
-
-#SN 4
-#s3server.superNodeID=16Uiu2HAmSXfk5mgmZd2YmA5Aug23vCdUesRuVEeCHSFUDeX2GxWv
-#s3server.superNodeAddr1=/ip4/49.235.52.30/tcp/9999
-#s3server.username=username1234
-#s3server.KUSp=5JcDH48njDbUQLu1R8SWwKsfWLnqBpWXDDiCgxFC3hioDuwLhVx
 s3server.username=storename123
 s3server.KUSp=5KfbRow4L71fZnnu9XEnkmVqByi6CSmRiADJCx6asRS4TUEkU79
-######
-
-#s3server.superNodeAddr1=/ip4/172.17.0.2/tcp/9999
-#s3server.superNodeID=16Uiu2HAmTzPwrF2DTZhCuw8Grx1KQ86xwiK2
-#s3server.username=devtester123
-#s3server.KUSp=5KfTE1LhHiepQmtRtLzAjeycRMJ4ECqGSSTQ4oKwLKCADBjMDKi
-
-
-#s3server.username=username222a
-#s3server.KUSp=5KSp1CcHtfZJjTpqZJwUveYyncEMWVfobWXLiAh9kf2NTeMjRSt
-#s3server.username=username222b
-#s3server.KUSp=5JT3vkUeoaMXKw2rJrtVEnC2JTYVNUeU1fU174wDkfTJKigGDDG
-
-#研发环境************************************
-
-
-#storename123
-#5KfbRow4L71fZnnu9XEnkmVqByi6CSmRiADJCx6asRS4TUEkU79
-
-#公测环境
-
-#s3server.username=usernamegxy2
-#s3server.KUSp=5HvbYUCmBbEzdTxhETakGZS7V6ZpLuh7q75xVyz58XsYWsrw1d1
-#研发环境账号 username1234 storename123
-#客户账号：
-#s3server.username=usernameshyf
-#s3server.KUSp=5JxX4Y9JUptGzPLWsbKkotjWUBai99S3z5AsJDuc8Vk83MHneg4
-#s3server.username=usernamegxy2
-#s3server.KUSp=5HvbYUCmBbEzdTxhETakGZS7V6ZpLuh7q75xVyz58XsYWsrw1d1
-#username1234
-#5JcDH48njDbUQLu1R8SWwKsfWLnqBpWXDDiCgxFC3hioDuwLhVx
-#
-#storename123
-#5KfbRow4L71fZnnu9XEnkmVqByi6CSmRiADJCx6asRS4TUEkU79
-#合约账户
-#s3server.contractAccount=hddpool12345
-
-#测试环境202
-#s3server.superNodeID=16Uiu2HAm4ejSpUiVYEYc2pCk7RUa3ScdswM6cXGwzTZziSKcAYwi
-#s3server.superNodeAddr1=/ip4/152.136.11.202/tcp/9999
-#
-#s3server.username=username1111
-#s3server.KUSp=5J4kLkFs6FTGBXFT3BYvSBfEQXVriU628GEKLwNekW19UziA5Z5
