--- a/pom.xml
+++ b/pom.xml
@@ -184,6 +184,23 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
+        <dependency>
+            <groupId>com.qcloud</groupId>
+            <artifactId>cos_api</artifactId>
+            <version>5.6.9</version>
+        </dependency>
+		<dependency>
+			<groupId>com.qcloud</groupId>
+			<artifactId>qcloud-java-sdk</artifactId>
+			<version>2.0.7</version>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.10</version>
+		</dependency>
+
 
 
 	</dependencies>
