--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,16 +3,13 @@
 # Copyright (c) 2016 Mind Consulting UG(haftungsbeschr?nkt)
 #
 # embedded tomcat server port
-server.port=8083
+server.port=8088
 server.tomcat.uri-encoding=utf-8
-#server.ssl.key-store=D:/s3cache/tomcat.keystore
-#server.ssl.key-password=123456
-#server.ssl.key-store-password=123456
-#server.ssl.key-alias=spring
-#server.servlet.context-path=/api/s3client
-# mapping path for the s3server servlet
-#server.http2.enabled=true
-s3server.baseUrl=
+spring.http.encoding.force=true
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+
+s3server.baseUrl=/api/s3
 # thread pool for the repository access
 s3server.threadPoolSize=100
 # enable or disable the authorization header check. if disabled, the system user will be used for all requests
@@ -20,20 +17,23 @@ s3server.threadPoolSize=100
 s3server.securityEnabled=false
 # switch to enable logging. each api request and each repository call will be logged
 s3server.loggingEnabled=true
-# directory where the FSRepository stores the bucket and file data
-s3server.fsrepo.root=D:/s3cache
+s3server.fsrepo.root=../s3cache
 s3server.s3store.accessKey=SYSTEM
 s3server.s3store.secretKey=SYSTEM
 s3server.uploadShardThreadNum =500
 s3server.downloadThread =200
 s3server.uploadBlockThreadNum=3
+#
+s3server.cosBackUp=on
+#S3Server安装目录
+s3server.dirctory=../conf
 #预分配节点数
 s3server.PNN=200
 #节点列表更新周期（分钟）
-s3server.PTR=2
+s3server.PTR=1
 #块上传错误重试次数
 s3server.RETRYTIMES = 500
-s3server.zipkinServer=http://39.96.58.245:9411/api/v2/spans
+s3server.zipkinServer=
 
 s3server.superNodeNum=0
 s3server.userID=1
@@ -42,14 +42,16 @@ s3server.port=6611
 s3server.url=
 #用于判断文件是否需要写入缓存，大于当前配置的值写入缓存，小于则直接存放在内存中
 s3server.allowMaxSize=209715200
-s3server.SYNC=onxxxxx
+s3server.SYNC=on
 s3server.SYNC_BUCKET=test
 s3server.queueSize=1000
 s3server.syncCount=5
-
-#SN 0 上海
-s3server.superNodeID=16Uiu2HAmPqE8R8U7CHRsKrNw9aVjdxUrGUEWBvNPGsVbaCBxrLkt
-s3server.superNodeAddr1=/ip4/49.234.139.206/tcp/9999
-
-s3server.username=storename123
-s3server.KUSp=5KfbRow4L71fZnnu9XEnkmVqByi6CSmRiADJCx6asRS4TUEkU79
+s3server.cosBucket=upload-yotta
+#研发网
+#s3server.eosHistoryUrl=http://47.112.119.28:8888/v1/history/
+#3节点
+#s3server.eosHistoryUrl=http://47.94.166.95:8888/v1/history/
+#主网
+s3server.eosHistoryUrl=http://ytsapi02.yottachain.net:8888/v1/history/
+#商业测试
+#s3server.eosHistoryUrl=http://132.232.219.237:8181/v1/history/
