--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,9 @@ s3server.s3store.secretKey=SYSTEM
 s3server.uploadShardThreadNum =500
 s3server.downloadThread =200
 s3server.uploadBlockThreadNum=3
+
+#2-30
+s3server.uploadFileMaxMemory=10
 #
 s3server.cosBackUp=on
 #S3Server安装目录
@@ -46,12 +49,12 @@ s3server.SYNC=on
 s3server.SYNC_BUCKET=test
 s3server.queueSize=1000
 s3server.syncCount=5
-s3server.cosBucket=upload-yotta
+s3server.cosBucket=tmpupload-yotta
 #研发网
-#s3server.eosHistoryUrl=http://47.112.119.28:8888/v1/history/
+s3server.eosHistoryUrl=http://47.112.119.28:8888/v1/history/
 #3节点
 #s3server.eosHistoryUrl=http://47.94.166.95:8888/v1/history/
 #主网
-s3server.eosHistoryUrl=http://ytsapi02.yottachain.net:8888/v1/history/
+#s3server.eosHistoryUrl=http://ytsapi02.yottachain.net:8888/v1/history/
 #商业测试
 #s3server.eosHistoryUrl=http://132.232.219.237:8181/v1/history/
