--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,12 +20,12 @@ s3server.loggingEnabled=true
 s3server.fsrepo.root=../s3cache
 s3server.s3store.accessKey=SYSTEM
 s3server.s3store.secretKey=SYSTEM
-s3server.uploadShardThreadNum =500
+s3server.uploadShardThreadNum =1500
 s3server.downloadThread =200
-s3server.uploadBlockThreadNum=3
+s3server.uploadBlockThreadNum=100
 
 #2-30
-s3server.uploadFileMaxMemory=10
+s3server.uploadFileMaxMemory=5
 #
 s3server.cosBackUp=on
 #S3Server°²×°Ä¿Â¼
