--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ s3server.uploadBlockThreadNum=100
 #2-30
 s3server.uploadFileMaxMemory=5
 #
-s3server.cosBackUp=off
+s3server.cosBackUp=on
 #S3Server安装目录
 s3server.dirctory=../conf
 #预分配节点数
