--- a/pom.xml
+++ b/pom.xml
@@ -80,21 +80,21 @@
 			</exclusions>
 		</dependency>
 
-		<dependency>
-			<groupId>MsgDef</groupId>
-			<artifactId>MsgDef</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>p2p-wrapper</groupId>
-			<artifactId>p2p-wrapper</artifactId>
-			<version>0.1</version>
-		</dependency>
-		<dependency>
-			<groupId>wrapper</groupId>
-			<artifactId>wrapper</artifactId>
-			<version>3.51</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>MsgDef</groupId>-->
+			<!--<artifactId>MsgDef</artifactId>-->
+			<!--<version>1.0-SNAPSHOT</version>-->
+		<!--</dependency>-->
+		<!--<dependency>-->
+			<!--<groupId>p2p-wrapper</groupId>-->
+			<!--<artifactId>p2p-wrapper</artifactId>-->
+			<!--<version>0.1</version>-->
+		<!--</dependency>-->
+		<!--<dependency>-->
+			<!--<groupId>wrapper</groupId>-->
+			<!--<artifactId>wrapper</artifactId>-->
+			<!--<version>3.51</version>-->
+		<!--</dependency>-->
 
 		<dependency>
 			<groupId>org.mongodb</groupId>
@@ -289,21 +289,12 @@
 			<artifactId>crc</artifactId>
 			<version>1.0.2</version>
 		</dependency>
-		<!--<dependency>-->
-			<!--<groupId>org.springframework</groupId>-->
-			<!--<artifactId>spring-core</artifactId>-->
-			<!--<version>3.2.9.RELEASE</version>-->
-		<!--</dependency>-->
-		<!--<dependency>-->
-			<!--<groupId>org.springframework</groupId>-->
-			<!--<artifactId>spring-context</artifactId>-->
-			<!--<version>3.2.9.RELEASE</version>-->
-		<!--</dependency>-->
-		<dependency>
-			<groupId>commons-codec</groupId>
-			<artifactId>commons-codec</artifactId>
-			<version>1.9</version>
-		</dependency>
+
+<!--		<dependency>-->
+<!--			<groupId>commons-codec</groupId>-->
+<!--			<artifactId>commons-codec</artifactId>-->
+<!--			<version>1.9</version>-->
+<!--		</dependency>-->
 		<!--<dependency>-->
 			<!--<groupId>org.mongodb</groupId>-->
 			<!--<artifactId>mongodb-driver</artifactId>-->
