--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,9 +20,9 @@ s3server.loggingEnabled=true
 s3server.fsrepo.root=../s3cache
 s3server.s3store.accessKey=SYSTEM
 s3server.s3store.secretKey=SYSTEM
-s3server.uploadShardThreadNum =1500
+s3server.uploadShardThreadNum =500
 s3server.downloadThread =200
-s3server.uploadBlockThreadNum=100
+s3server.uploadBlockThreadNum=30
 
 #2-30
 s3server.uploadFileMaxMemory=5
@@ -51,10 +51,16 @@ s3server.queueSize=1000
 s3server.syncCount=5
 s3server.cosBucket=tmpupload-yotta
 #研发网
-s3server.eosHistoryUrl=http://47.112.119.28:8888/v1/history/
+#s3server.eosHistoryUrl=http://47.112.119.28:8888/v1/history/
 #3节点
 #s3server.eosHistoryUrl=http://47.94.166.95:8888/v1/history/
 #主网
-#s3server.eosHistoryUrl=http://ytsapi02.yottachain.net:8888/v1/history/
+s3server.eosHistoryUrl=http://ytsapi02.yottachain.net:8888/v1/history/
 #商业测试
 #s3server.eosHistoryUrl=http://132.232.219.237:8181/v1/history/
+#Docker
+#s3server.eosHistoryUrl=http://172.18.0.2:8888/v1/history/
+
+s3server.username=storename123
+s3server.KUSp=5Htg5yU4LS9K6H1ZSTJrXNoFiDWFR7nFgiitQMjnSkcQ7Bc39QV
+
